# exercises

./: .gitignore
practice_exam/: CMakeLists.txt  main  q1.c  q2.c  q3.c  q4.c  q5.c  q7.c  q8.c  q9.c
week1/: CMakeLists.txt  EXERCISES1.txt
week1/exercises/: ex1bmi.c  ex2deg_rad.c  ex3factorial.c  ex4sum_avg.c  ex5functions.c  ex6fiddling.c  ex7practise.c  ex8nim.c
week1/samples/: c2f.c  functions.c  if_stmt.c  io.c  nested_stmt.c  operators.c  random.c  variables.c  while_stmt.c
week2/: CMakeLists.txt  EXERCISES2.txt
week2/exercises/: ex1quad.c  ex2easter.c  ex3series.c  ex4puzzlers.c  ex5bit_set.c  ex6day_nbr.c  ex7ptr.c
week2/samples/: bit_operators.c  incdec.c  math.c  ptr.c  ptr_func.c  puzzlers.c  series.c
week3/: CMakeLists.txt  EXERCISES3.txt
week3/exercises/: ex1sum_to.c  ex2sum_arr.c  ex3arr_func.c  ex4matrix.c  ex5matrix_func.c  ex6common_seq.c
week3/samples/: arr_func.c  arrays.c  enum.c  for_stmt.c  matrix.c  matrix_func.c
week4/: CMakeLists.txt  EXERCISES4.txt
week4/exercises/: ex1count_unique.c  ex2rotate.c  ex3remdupl.c  ex4median.c  ex5common_elems.c  ex6unique_rows.c
week4/samples/: ptr_arr.c  ptr_arr_func.c  ptr_matrix.c  ptr_matrix_func.c  use_mem.c
week5/: CMakeLists.txt  EXERCISES5.txt
week5/exercises/: ex1pts_tri.c  ex2dyn_allocate.c  ex3linked_list.c  ex6remdupl_dyn.c
week5/exercises/ex4module/: ex4bit_module.c  ex4bit_module.h  ex4main.c
week5/exercises/ex5module/: ex5list_module.c  ex5list_module.h  ex5main.c
week5/samples/: dyn_struct.c  linked_list.c  linked_list_func.c  ptr_struct.c  struct.c  struct_func.c  use_malloc.c
week6/: CMakeLists.txt  EXERCISES6.txt
week6/exercises/: ex1word_count.c  ex2str_func.c  ex3robberlang.c  ex5paren_match.c  ex6lcr.c
week6/exercises/ex4crypto/: ex4crypto.c  out.txt  out2.txt
week6/samples/: all_lang.c  char.c  string.c  string_func.c  string_ptr.c  use_string_h.c
week6/samples/file/: file.c  in.txt  out.txt
